2015-12-01  Mark Wielaard  <mjw@redhat.com>

	* link_map.c (dwfl_link_map_report): Track whether in.d_buf comes
	from exec or memory_callback, free as appropriate.

2015-12-01  Mark Wielaard  <mjw@redhat.com>

	* libdwflP.h (struct Dwfl_User_Core): New.
	(struct DWfl): Replace executable_for_core with user_core.
	* argp-std.c (parse_opt): Store core and fd in Dwfl user_core.
	* core-file.c (dwfl_core_file_report): Check and store
	executable_for_core in Dwfl user_core.
	* dwfl_build_id_find_elf.c (dwfl_build_id_find_elf): Check and use
	executable_for_core in Dwfl user_core.
	* dwfl_end.c (dwfl_end): Release resources held in Dwfl user_core.
	* link-map.c (report_r_debug): Check executable_for_core in Dwfl
	user_core.
	(dwfl_link_map_report): Likewise.

2015-11-19  Mark Wielaard  <mjw@redhat.com>

	* dwfl_module.c (__libdwfl_module_free): Remove Dwfl_Module Ebl from
	eh_cfi and dwarf_cfi cache if necessary before calling dwarf_end and
	dwarf_cfi_end.

2015-11-13  Chih-Hung Hsieh <chh@google.com>

	* gzip.c (unzip): Move nested functions to file scope.

2015-10-21  Chih-Hung Hsieh <chh@google.com>
	    Mark Wielaard  <mjw@redhat.com>

	* dwfl_module_getsrc_file.c (dwfl_module_getsrc_file): Move nested
	functions 'dwarf_line_file', 'dwfl_line', and 'dwfl_line_file' to
	file scope. Rename dwarf_line_file to dwfl_dwarf_line_file. Don't
	use INTUSE.

2015-10-21  Chih-Hung Hsieh <chh@google.com>

	* frame_unwind.c (expr_eval): Move nested function 'push' and 'pop'
	to file scope. Pass used local variables in struct eval_stack.

2015-10-21  Chih-Hung Hsieh <chh@google.com>

	* dwfl_module.c (dwfl_report_module): Move nested function 'use' to
	file scope.

2015-10-09  Josh Stone  <jistone@redhat.com>

	* core-file.c (elf_begin_rand): Replace loff_t with off_t.
	* open.c (decompress): Replace off64_t with off_t.
	* gzip.c (unzip): Likewise.
	* image-header.c (__libdw_image_header): Likewise.
	* libdwflP.h: Likewise in function declarations.